# Optymalizacja

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Wyniki_Lab_1_2_Optymalizacja_MF_JG_MG_AG.xlsx  exceptions.h  main.cpp  makefile  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  rzeczywista_lab5.csv  solution.cpp  solution.h  symulacja_lab0.csv  testy_lab5.csv  user_funs.cpp  user_funs.h
.zed/: debug.json
